Fix: double scrollbar in newsletter page

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -25,7 +25,6 @@ body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
   width: 100%;
-  overflow-x: hidden;
 }
 
 [data-whatintent='mouse'] *:focus {
